--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-social": "^5.1.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cross-fetch": "^3.0.6",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -48,7 +49,9 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-animation-components": "^3.0.0",
     "react-app-polyfill": "^1.0.6",
     "react-css-modules": "^4.7.11",
     "react-dev-utils": "^10.2.1",
@@ -57,6 +60,7 @@
     "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
